La mayoria del flujo del programa funciona, falta implementar redis!

--- a/sd_tarea_1/generator/Dockerfile
+++ b/sd_tarea_1/generator/Dockerfile
@@ -3,8 +3,10 @@ FROM python:3.13-slim
 # Setting the working directory in the container to /app
 WORKDIR /app
 
-# Copying everything
-COPY . .
+COPY requirements.txt .
 
 # Installing the required dependencies using pip
 RUN pip install --no-cache-dir -r requirements.txt
+
+# run generator.py
+CMD ["python", "-u","generator.py"]
