--- a/sd_tarea_1/docker-compose.yml
+++ b/sd_tarea_1/docker-compose.yml
@@ -1,28 +1,78 @@
 version: "3.9"
 
 services:
-    qa_score_server:
-        build: "./qa_score_server"
-        container_name: "qa_score_server"
+    postgres:
+        image: postgres:17
+        container_name: "postgres"
+        environment:
+            - POSTGRES_USER=${POSTGRES_USER}
+            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+            - POSTGRES_DB=${POSTGRES_DB}
+        volumes:
+            - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+            - postgres_data:/var/lib/postgresql/data
+        networks:
+            - netuworku
+        ports:
+            - "5432:5432"
+
+        healthcheck:
+            test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+            interval: 10s
+            timeout: 5s
+            retries: 5
+    qa_score:
+        build: "./qa_score"
+        container_name: "qa_score"
         environment:
             - GOOGLE_API_KEY=${GOOGLE_API_KEY}
         volumes:
-            - qa_score_server_data:/app/qa_score_server_data
+            - ./qa_score:/app  
+            - qa_score_data:/data/qa_score_data
         networks:
             - netuworku
         ports:
             - "8000:8000"
-    traffic_generator:
-        build: "./traffic_generator"
-        container_name: "traffic_generator"
+    middleware_server:
+        build: "./middleware_server"
+        container_name: "middleware_server"
+        environment:
+            - POSTGRES_HOST=${POSTGRES_HOST}
+            - POSTGRES_USER=${POSTGRES_USER}
+            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+            - POSTGRES_DB=${POSTGRES_DB}
+            - POSTGRES_PORT=5432
+        
         volumes:
-            - traffic_generator_data:/app/traffic_generator_data
+            - ./middleware_server:/app
+            - middleware_server_data:/data/middleware_server_data
         networks:
             - netuworku
-      
+        ports:
+            - "8075:8075"
+            
+        depends_on:
+            postgres:
+                condition: service_healthy
+
+    generator:
+        build: "./generator"
+        container_name: "generator"
+        volumes:
+            - ./generator:/app
+            - generator_data:/data/generator_data
+        networks:
+            - netuworku
+        depends_on:
+            - middleware_server
+
+
+        
 volumes:
-  qa_score_server_data:
-  traffic_generator_data:
+  qa_score_data:
+  generator_data:
+  postgres_data:
+  middleware_server_data:
 
 networks:
    netuworku:
