--- a/sd_tarea_1/qa_score/Dockerfile
+++ b/sd_tarea_1/qa_score/Dockerfile
@@ -4,8 +4,8 @@ FROM python:3.13-slim
 # Setting the working directory in the container to /app
 WORKDIR /app
 
-# Copying everything
-COPY . .
+
+COPY requirements.txt .
 
 # Installing the required dependencies using pip
 RUN pip install --no-cache-dir -r requirements.txt
@@ -14,4 +14,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 EXPOSE 8000
 
 # Run FastAPI with Uvicorn
-CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "sc_server:app", "--host", "0.0.0.0", "--port", "8000"]
