--- a/sd_tarea_1/docker-compose.yml
+++ b/sd_tarea_1/docker-compose.yml
@@ -50,6 +50,11 @@ services:
             - netuworku
         ports:
             - "8000:8000"
+        healthcheck:
+            test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+            interval: 5s
+            timeout: 5s
+            retries: 5
     middleware_server:
         build: "./middleware_server"
         container_name: "middleware_server"
@@ -67,11 +72,18 @@ services:
             - netuworku
         ports:
             - "8075:8075"
-            
+        healthcheck:
+            test: ["CMD", "curl", "-f", "http://localhost:8075/health"]
+            interval: 5s
+            timeout: 5s
+            retries: 5
+
         depends_on:
             postgres:
                 condition: service_healthy
             redis_1:
+                condition: service_healthy
+            qa_score:
                 condition: service_healthy
     redisinsight:
         image: redislabs/redisinsight:2.70
@@ -95,7 +107,8 @@ services:
         networks:
             - netuworku
         depends_on:
-            - middleware_server
+            middleware_server:
+                condition: service_healthy
 
 
         
