--- a/sd_tarea_1/qa_score/Dockerfile
+++ b/sd_tarea_1/qa_score/Dockerfile
@@ -10,6 +10,9 @@ COPY requirements.txt .
 # Installing the required dependencies using pip
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Installing curl for healthcheck
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 # Expose port 8000
 EXPOSE 8000
 
